# ambientsaga

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: FULL_RECONSTRUCTION_PLAN.md  api_reference.md  coding_standards.md
src/ambientsaga/: __init__.py  __main__.py  config.py  main.py  types.py
src/ambientsaga/agents/: __init__.py  agent.py  cognition.py  core.py  human_like.py  llm_queue.py  tier.py  unified_agent.py
src/ambientsaga/causal/: __init__.py  engine.py
src/ambientsaga/culture/: __init__.py  art.py  beliefs.py  collision.py  language.py  rituals.py
src/ambientsaga/economy/: __init__.py  full_economy.py  markets.py  production.py
src/ambientsaga/emergence/: __init__.py  butterfly_effects.py  full_domain_coupling.py  humanity_layer.py  institutional_emergence.py  nexus.py  true_emergence.py
src/ambientsaga/evolution/: __init__.py  culture.py  emergence.py  engine.py  genome.py  selection.py  variation.py
src/ambientsaga/history/: __init__.py  butterfly.py
src/ambientsaga/natural/: __init__.py  climate.py  disaster.py  diversity.py  ecology.py  terrain.py  water.py
src/ambientsaga/optimization/: __init__.py
src/ambientsaga/politics/: __init__.py  governance.py  system.py
src/ambientsaga/protocol/: __init__.py  emergent_econ.py  interaction.py  language_emergence.py  reputation.py  social_norms.py
src/ambientsaga/research/: academic_output.py  benchmark.py  causal_trace.py  chronicle.py  metrics.py
src/ambientsaga/scenarios/: __init__.py  presets.py
src/ambientsaga/science/: __init__.py  biology.py  chemistry.py  ecology.py  functional_science.py  physics.py  systems.py
src/ambientsaga/simulation/: __init__.py  engine.py  event_engine.py
src/ambientsaga/social/: __init__.py  ethnicity.py  network.py  organizations.py  race.py  settlement.py  stratification.py
src/ambientsaga/visualization/: __init__.py  enhanced.py  renderer.py  web_server.py
src/ambientsaga/world/: __init__.py  chunk.py  events.py  signal_bus.py  state.py  tick.py  world.py
tests/: __init__.py  test_agents.py  test_core.py  test_emergence.py  test_natural.py  test_performance_regression.py  test_protocol.py
