[project]
name = "ambientsaga"
version = "0.1.0"
description = "AI Natural World and AI Social World Simulation - Thousands of AI agents in an atmospheric virtual world"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "bingdongni"}
]
keywords = [
    "ai", "simulation", "multi-agent", "emergent-behavior",
    "social-simulation", "virtual-world", "artificial-society",
    "generative-ai", "large-language-models"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.26.0",
    "msgspec>=0.18.0",
    "websockets>=12.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
viz = [
    "pillow>=10.0.0",
    "matplotlib>=3.8.0",
]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.3.0",
]
all = [
    "ambientsaga[dev,viz,llm]",
]

[project.scripts]
ambientsaga = "ambientsaga.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ambientsaga"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip() strict parameter (Python 3.9 compat)
    "C901",  # function complexity (complex CLI handlers)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["ambientsaga"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
